[package]
name = "gxt-simple-c"
edition = "2024"
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "gxt-simple-c-json"
path = "src/main.rs"

[dependencies]
gxt = "4.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
